app/static/app/content/sitev2.css
/* ... */
.carousel-fade .carousel-inner .item .carousel-caption,
.carousel-fade .carousel-inner .active.left .carousel-caption,
.carousel-fade .carousel-inner .active.right .carousel-caption {
    margin: 0 0 -200px 0;
}

.carousel-fade .carousel-inner .active,
.carousel-fade .carousel-inner .next.left,
.carousel-fade .carousel-inner .prev.right {
    opacity: 1;
}

.carousel-fade .carousel-inner .active .carousel-caption,
.carousel-fade .carousel-inner .next.left .carousel-caption,
.carousel-fade .carousel-inner .prev.right .carousel-caption {
    margin: 0;
}

.carousel-caption {
    position: absolute;
    right: 0;
    left: 0;
    bottom: 20%;
    padding: 0;
}

.carousel-fade .carousel-inner .next,
.carousel-fade .carousel-inner .prev,
.carousel-fade .carousel-inner .active.left,
.carousel-fade .carousel-inner .active.right {
    left: 0;
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
}

.carousel-fade .carousel-control {
    z-index: 2;
}


.carousel,
.carousel-inner,
.carousel-inner .item {
    height: 100%;
}

/*main page row*/
#indexrow{
    margin: 30px 0 30px 0;
}
#indexrow .col-md-4{
    padding: 33px;
}
#indexrow .col1 {
    background-color: #000000;
}
#indexrow .col2 {
    background-color: #3b3b3b;
}
#indexrow .col3 {
    background-color: #ededed;
}
#indexrow h2{
    text-align: center;
    font-family: 'DIN Neuzeit Grotesk',sans-serif;
    font-size: 25px;
    letter-spacing: 0.2em;
}
#indexrow .col1 h2 {
    margin-top: 36px;
    color: #FCFCFC;
    margin-bottom: 31px
}
#indexrow .col2 h2 {
    margin-top: 45px;
    color: #F7D57F;
    margin-bottom: 50px;
}
#indexrow .col3 h2 {
    margin-top: 45px;
    color: #A6A6A6;
    margin-bottom: 50px;
}
#indexrow .col-content {
    font-size: 18px;
    line-height: 1.4em;
    font-family: Nunito, sans-serif;
}
.col1 .col-content {
    font-weight: 200;
    color: #FFFFFF;
}
.col2 .col-content {
    font-weight: 200;
    color: #FFFFFF;
}
.col3 .col-content {
    font-weight: normal;
    color: #000000;
}
#indexrow .col-link{
    height: 35px;
    text-align: center;
    line-height: 36px;
}
.col-content p{
    margin-bottom: 25px
}
.col3 .btn1{
    width: 206px; /*TODO*/
}
.col1 .col-link a {
    text-decoration: none;
    color: #FCFCFC;
    transition: color 0.3s ease-out 0s;
}
.col2 .col-link a {
    text-decoration: none;
    color: #FCFCFC;
    transition: color 0.3s ease-out 0s;
}
.col3 .col-link a {
    text-decoration: none;
    color: #000000;
    transition: color 0.3s ease-out 0s;
}
.col2 .col-link strong{
    color: #4BD1A0;
}
.col-content strong{
    font-family: 'Nunito',sans-serif;
    font-weight: bold;
}
.col-link a:hover {
    text-decoration: none;
    color: #4BD1A0;
}

/******Capabilities row***********/
#capabilities {
    margin-top: 200px;
}
#capabilities h2{
    font-family: 'DIN Neuzeit Grotesk', sans-serif;
    letter-spacing: 0.2em;
    color: #FCFCFC;
}
#capabilities h3 {
    font-family: Nunito, sans-serif;
    color: #4BD1A0;
    /*color: #f7d57f;*/
    margin-top: 50px;
    display: inline-block;
    letter-spacing: 0.2em;
}
#capabilities .explanation{
    font-family: Nunito, sans-serif;
    font-weight: 200;
    color: #FCFCFC;
    font-size: 18px;
    margin-left: 100px
}
#capabilities img{
    object-fit: contain;
}
#capabilities span{
    font-family: 'Nunito', serif;
    font-size: 30px;
    font-weight: 100;
    color: #f7d57f;
    display: inline-block;
    margin-bottom: 60px;
}
#capabilities .cap_wrapper{
    margin-bottom: 30px;
}
/*footer*/
#footer-wide {
    background-color: #F7D57F;
}
#footer-wide > .container > footer > .row{
    padding-top: 20px;
    padding-bottom: 20px;
}
.copyright{
    font-family: 'Playfair Display',sans-serif;
    font-size: 14px; 
    text-align: center;
}
.social-bar{
    width: auto;
    margin:auto
}
.social-bar{
    list-style:none;
}
.social-bar img{
    width: 28px;
    object-fit: cover;
}

/*****About page*****/
/*navbar background*/
.navbar-image{
    position: fixed;
    opacity: 0.65;
    top: 0px;
    width: 100%;
    z-index: -1;
}
.navbar-image img{
    object-fit: cover; 
    width: 100%;
    height: 100%;
}
/*overview*/
#overview{
    padding-bottom: 30px;
}
#overview h2 {
    font-family: 'DIN Neuzeit Grotesk',sans-serif;
    color: #FCFCFC;
    font-size: 50px;
    margin: 0px;
}
#overview p {
    font-family: 'Playfair Display',serif;
    color: #F5DDA2;
    font-size: 21px;
    padding-top: 20px;
}

/*about strip*/
#about-strip{
    background-color: #FCFCFC;
    font-family: 'Playfair Display',serif;
    color: #000000;
    font-size: 19px;
}
#about-strip h4 {
    color: #F7D57F;
    font-family: 'DIN Neuzeit Grotesk',sans-serif;
    font-size: 32px;
    padding-bottom: 35px;
}
#about-strip .row{
    margin: 60px 0 30px 0;
}
#about-strip .col-md-4{
    padding-right: 35px;
    padding-top: 50px;
}
#about-strip ul{
    font-family: 'DIN Neuzeit Grotesk',sans-serif;
    text-align: center;
    padding: 0 0 30px 0;
}
#about-strip li{
    padding-top: 5px;
}
#about-strip a{
    color: #3B3B3B;
    transition: all 0.3s ease 0s;
}
#about-strip a:hover {
    text-decoration: none;
    font-size: 1.1em;
}
#about-strip .row{
    align-items: center;
}
#client_logos h4{
    padding-top: 50px;
    padding-bottom: 0px;
}
#client_logos .image-col{
    text-align: center;
}
#client_logos img:hover{
    transform: scale(1.1, 1.1);
}
#client_logos img {
    transition: transform 0.3s;
    object-fit: contain;
    width: 100%;
    max-width: 200px;
    padding-top: 20px;
    padding-bottom: 20px;
}

/***Contacts page***/
/* contact strip*/
#contact-strip{
    position: relative;
}
#contact-strip .strip-background{
    position: absolute;
    height: 100%;
    width: 100%;
    z-index: -1;
    object-fit: cover;
    opacity: 0.4;
}
#contact-strip .container{
    text-align: center;
}
/* ... */

